@@ -3,6 +3,7 @@ PHORONIX TEST SUITE CHANGE-LOG
 Phoronix Test Suite (Git)
 
 pts_Graph: Pass/fail graph formatting improvements
+phodevi: Convert large RAM capacity basic strings into GB rather than large MB
 
 Phoronix Test Suite 9.2.1
 11 December 2019
